--- a/src/components/sample_products/ProductOverview/style.css
+++ b/src/components/sample_products/ProductOverview/style.css
@@ -26,11 +26,11 @@
 
 @media screen and (max-width: 640px) and (min-width: 320px) {
   .main {
-    grid-template-columns: repeat(2, 200px);
-    grid-template-rows: repeat(2, 300px);
+    grid-template-columns: repeat(1, auto);
+    grid-template-rows: repeat(4, 300px);
     height: auto;
-    grid-template-areas: "live skincare" "kitchen electronics";
-    margin-inline: 20px;
+    grid-template-areas: "live" " skincare" "kitchen " "electronics";
+    padding-inline: 20px;
   }
   .first img {
     object-fit: cover;
@@ -61,7 +61,7 @@
 @media screen and (min-width: 641px) and (max-width: 1024px) {
   .main {
     grid-template-columns: repeat(3, auto);
-    grid-template-rows: repeat(2, auto);
+    grid-template-rows: repeat(3, auto);
     grid-template-areas: "live  live live " "skincare kitchen electronics";
     padding-inline: 20px;
   }
