--- a/src/components/sample_products/ProductOverview/style.css
+++ b/src/components/sample_products/ProductOverview/style.css
@@ -1,16 +1,15 @@
 .main {
   display: grid;
-  grid-template-columns: repeat(4, auto);
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  grid-template-areas: "live skincare kitchen" "live skincare electronics";
+  gap: 10px;
+  justify-content: center;
   height: auto;
-  gap: 20px;
-  grid-template-rows: repeat(2, 280px);
-  grid-template-areas: "live live skincare kitchen" "live live skincare electronics";
 }
 
 .first {
   grid-area: live;
-  height: auto;
-  width: auto;
 }
 
 .second {
@@ -21,16 +20,14 @@
 }
 .fourth {
   grid-area: electronics;
-  height: 300px;
 }
 
 @media screen and (max-width: 640px) and (min-width: 320px) {
   .main {
-    grid-template-columns: repeat(1, auto);
-    grid-template-rows: repeat(4, 300px);
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(4, 1fr);
     height: auto;
     grid-template-areas: "live" " skincare" "kitchen " "electronics";
-    padding-inline: 20px;
   }
   .first img {
     object-fit: cover;
@@ -60,10 +57,41 @@
 }
 @media screen and (min-width: 641px) and (max-width: 1024px) {
   .main {
-    grid-template-columns: repeat(3, auto);
-    grid-template-rows: repeat(3, auto);
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
     grid-template-areas: "live  live live " "skincare kitchen electronics";
     padding-inline: 20px;
+  }
+  .first img {
+    object-fit: cover;
+    width: 100%;
+    height: 300px;
+    border-radius: 10px;
+  }
+
+  .second img {
+    object-fit: cover;
+    width: 100%;
+    height: 300px;
+    border-radius: 10px;
+  }
+  .third img {
+    object-fit: cover;
+    width: 100%;
+    height: 300px;
+    border-radius: 10px;
+  }
+  .fourth img {
+    object-fit: cover;
+    width: 100%;
+    height: 300px;
+    border-radius: 10px;
+  }
+}
+@media screen and (min-width: 1536px) {
+  .main {
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-areas: "skincare kitchen electronics" "live  live live ";
   }
   .first img {
     object-fit: cover;
